Fixed alignment of devices titles, temporary hidden filters on smaller screens

--- a/_sass/_tablet.sass
+++ b/_sass/_tablet.sass
@@ -79,10 +79,11 @@ $ocean-nodes-padding-Y: 0px
 		padding-bottom: 0px
 
 	#device-filters
+		display: none
 		position: relative
 		z-index: 1
 		margin-top: 124px
-		display: flex
+		//display: flex
 		flex-direction: row
 		justify-content: space-between
 		width: 100%
